<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_portugal_pena"
        android:scaleType="centerCrop"
        android:src="@drawable/intro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_quiz_title"
            style="@style/TextViewStyle.Intro"
            android:paddingBottom="0dp"
            android:text="@string/congratulations"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_quiz_message"
            style="@style/TextViewStyle.Intro"
            android:paddingTop="0dp"
            android:text="@string/all_questions" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dark_background_out"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/text_padding"
        android:paddingRight="@dimen/text_padding"
        android:visibility="invisible">

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score" />

        <TextView
            android:id="@+id/tv_quiz_score"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

    </LinearLayout>

    <TextView
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/text_padding"
        android:gravity="start"
        android:text="@string/photo_by"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</RelativeLayout>