<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_answer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:visibility="invisible">

    <LinearLayout
        android:id="@+id/ll_answer_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_wiki"
            style="@style/MyButtonStyle"
            android:text="@string/nav_wiki" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_answer_text"
        style="@style/MyTextViewStyle.Question"
        android:layout_width="match_parent"
        android:text="@string/default_question_text" />

    <ImageView
        android:id="@+id/iv_answer"
        android:layout_width="@dimen/answer_image_size"
        android:layout_height="@dimen/answer_image_size"
        android:layout_centerInParent="true"
        android:contentDescription="@string/answer_image"
        android:scaleType="fitCenter" />

</RelativeLayout>